erDiagram
    USERS {
        int id PK
        string username
        string password_hash
        string role
        bool is_active
        datetime created_at
    }

    PLANTS {
        int id PK
        string name
        string identificador_fisico
        string especie_variedad
        date fecha_siembra
        string estado_vital
        json metadata_cientifica
        int node_id FK
    }

    EXPERIMENTS {
        int id PK
        string name
        string description
        datetime created_at
    }

    EXPERIMENTO_PLANTA_LINK {
        int experiment_id FK
        int plant_id FK
    }

    TELEMETRY_TH {
        int id PK
        int node_id
        float temperature
        float humidity
        datetime timestamp
    }

    ACTIVITY_LOG {
        int id PK
        string action_type
        int device_id
        string description
        datetime timestamp
    }

    SEQUENCES {
        int id PK
        string name
        json steps
        datetime created_at
    }

    PLANTS ||--o{ EXPERIMENTO_PLANTA_LINK : "participa en"
    EXPERIMENTS ||--o{ EXPERIMENTO_PLANTA_LINK : "agrupa"
    PLANTS ||--o{ TELEMETRY_TH : "nodo genera"
    USERS ||--o{ ACTIVITY_LOG : "genera"
